--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
-    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
