--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "sharp": "^0.31.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
