--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.3",
     "@mui/x-data-grid": "5.17.2",
     "diff": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
